@@ -1,3 +1,9 @@
+2003-01-20  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.in (AM_INIT_AUTOMAKE): Bump version.
+	* doc/TODO: Remove note about sleep.h.
+	* include/avr/sleep.h: Make it work with any device (mostly).
+
 2003-01-21  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* include/stdio.h: add SEEK_*.
